@startuml Class Diagram Services

	title MoveMate - Class Diagram - Services
	footer Last modified 26-09-2023 by Johnny Bakker

	namespace Services {

		class FireBaseService {
			+messaging: FirebaseMessaging
			#app: FirebaseApp
			+FireBaseService(config: IConfiguration)
			+GetName(): string
			+BroadcastAsync(title: string, body: string, identifiers: IEnumerable<string>): Task
		}

		interface INotificationService {
			+{abstract} BroadcastAsync(title: string, body: string, identifiers: IEnumerable<string>): Task
		}

		INotificationService <|.. FireBaseService

		
		
		interface ITokenFactory {
			+{abstract} Create(session: Session): string
		}

		class JwtTokenFactory {
			-_issuer: string
    		-_header: JwtHeader
	
    		+JwtTokenFactory(config: IConfiguration)
			+Create(session: Session): string
		}
	}

	Services.FireBaseService -[hidden]- Services.ITokenFactory

	Services.ITokenFactory <|.. Services.JwtTokenFactory
	Services.ITokenFactory ..> Models.Data.Session
@enduml
